# writeToBigQuery

./: README.md  pyproject.toml  setup.cfg  setup.py  writeToBq.py
src/write_to_bq/: write_to_bq.py
write_to_bq/: main.py
