# Please keep all characters in this file in ASCII
# distutils uses system's locale to interpret it and not everybody
# uses UTF-8. See https://github.com/httpie/cli/issues/1039
# for an example
[options]
packages = find:
install_requires =
    google-cloud-bigquery
    pyarrow
    pandas
python_requires = >=3.10

[options.packages.find]
include = writeToBq